--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.3.4
 certifi==2021.5.30
 cffi==1.14.6
 charset-normalizer==2.0.3
+cloudinary==1.29.0
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==3.4.7
@@ -9,6 +10,8 @@ defusedxml==0.7.1
 dj-database-url==0.5.0
 Django==3.2.5
 django-appconf==1.0.4
+django-cleanup==6.0.0
+django-cloudinary-storage==0.3.0
 django-cors-headers==3.7.0
 django-heroku==0.3.1
 django-imagekit==4.0.2
@@ -20,6 +23,7 @@ idna==3.2
 itypes==1.2.0
 Jinja2==3.0.1
 MarkupSafe==2.0.1
+mysqlclient==2.0.3
 oauthlib==3.1.1
 pilkit==2.0
 Pillow==8.3.2
@@ -40,5 +44,3 @@ sqlparse==0.4.2
 uritemplate==3.0.1
 urllib3==1.26.6
 whitenoise==5.2.0
-cloudinary
-django-cloudinary-storage
